RESOLVED FIXED282297
Crash under NetworkCache::SpeculativeLoadManager::~SpeculativeLoadManager()
https://bugs.webkit.org/show_bug.cgi?id=282297
Summary Crash under NetworkCache::SpeculativeLoadManager::~SpeculativeLoadManager()
Chris Dumez
Reported 2024-10-29 16:18:06 PDT
Crash under NetworkCache::SpeculativeLoadManager::~SpeculativeLoadManager(): ``` 17 WTFCrashWithInfo(int, char const*, char const*, int) (WebKit) 17 WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int>::decrementPtrCount() const (WebKit) 17 WTF::CheckedRef<WebKit::NetworkCache::Storage, WTF::RawPtrTraits<WebKit::NetworkCache::Storage>>::~CheckedRef() (WebKit) 17 WTF::CheckedRef<WebKit::NetworkCache::Storage, WTF::RawPtrTraits<WebKit::NetworkCache::Storage>>::~CheckedRef() (WebKit) ==> 17 WebKit::NetworkCache::SpeculativeLoadManager::~SpeculativeLoadManager() (WebKit) <== 17 std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoadManager>::operator()[abi:sn180100](WebKit::NetworkCache::SpeculativeLoadManager*) const (WebKit) 17 std::__1::unique_ptr<WebKit::NetworkCache::SpeculativeLoadManager, std::__1::default_delete<WebKit::NetworkCache::SpeculativeLoadManager>>::reset[abi:sn180100](WebKit::NetworkCache::SpeculativeLoadManager*) (WebKit) 17 WTF::Function<void (bool)>::operator()(bool) const (WebCore) 17 WebCore::LowPowerModeNotifier::notifyLowPowerModeChanged(bool) (WebCore) 17 WebCore::notifyLowPowerModeChanged(WebCore::LowPowerModeNotifier&, bool) (WebCore) 17 -[WebLowPowerModeObserver _didReceiveLowPowerModeChange]::$_2::operator()() const (WebCore) ```
Attachments
Chris Dumez
Comment 1 2024-10-29 16:18:14 PDT
Chris Dumez
Comment 2 2024-10-29 16:28:43 PDT
EWS
Comment 3 2024-10-29 22:34:34 PDT
Committed 285883@main (33be0a4c0f11): <https://commits.webkit.org/285883@main> Reviewed commits have been landed. Closing PR #35913 and removing active labels.
EWS
Comment 4 2024-10-31 09:34:28 PDT
Committed 283286.395@safari-7620-branch (42b3020af4da): <https://commits.webkit.org/283286.395@safari-7620-branch> Reviewed commits have been landed. Closing PR #2166 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.