Source/WebKit/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp
@@ -245,7 +245,7 @@ private:
             LOG(NetworkCacheSpeculativePreloading, "(NetworkProcess) * Subresource: '%s'.", subresourceLoad->key.identifier().utf8().data());
 #endif
 
-        Ref storage = m_storage.get();
+        RefPtr storage = m_storage.get();
         if (m_existingEntry) {
             m_existingEntry->updateSubresourceLoads(m_subresourceLoads);
             storage->store(m_existingEntry->encodeAsStorageRecord(), [](const Data&) { });
@@ -255,7 +255,7 @@ private:
         }
     }
 
-    CheckedRef<Storage> m_storage;
+    ThreadSafeWeakPtr<Storage> m_storage; // Not expected be to be null.
     Key m_mainResourceKey;
     Vector<std::unique_ptr<SubresourceLoad>> m_subresourceLoads;
     WTF::Function<void()> m_loadCompletionHandler;
@@ -275,13 +275,11 @@ SpeculativeLoadManager::SpeculativeLoadManager(Cache& cache, Storage& storage)
 {
 }
 
-SpeculativeLoadManager::~SpeculativeLoadManager()
-{
-}
+SpeculativeLoadManager::~SpeculativeLoadManager() = default;
 
 Ref<Storage> SpeculativeLoadManager::protectedStorage() const
 {
-    return m_storage.get();
+    return m_storage.get().releaseNonNull();
 }
 
 bool SpeculativeLoadManager::canUsePreloadedEntry(const PreloadedEntry& entry, const ResourceRequest& actualRequest)
@@ -627,7 +625,7 @@ void SpeculativeLoadManager::startSpeculativeRevalidation(const GlobalFrameID& f
 void SpeculativeLoadManager::retrieveSubresourcesEntry(const Key& storageKey, WTF::Function<void (std::unique_ptr<SubresourcesEntry>)>&& completionHandler)
 {
     ASSERT(storageKey.type() == "Resource"_s);
-    Ref storage = m_storage.get();
+    RefPtr storage = m_storage.get();
     auto subresourcesStorageKey = makeSubresourcesKey(storageKey, storage->salt());
     storage->retrieve(subresourcesStorageKey, static_cast<unsigned>(ResourceLoadPriority::Medium), [completionHandler = WTFMove(completionHandler)](auto record, auto timings) {
         if (!record) {
